--- a/lab9_windowEvents/lab9_style.css
+++ b/lab9_windowEvents/lab9_style.css
@@ -13,14 +13,17 @@ img{width: 100%;display: block;}
 .image_container{
     width: 90%;
     margin: auto;
-    background-color:aliceblue;
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: nowrap;
+    background-color: aliceblue;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2em;
+    padding: 2em;
+    border-radius: 10px;
 }
 .img_gallery{
-    width: 500px;
-    margin: 2em;
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
 }
 
 /* to the top*/
@@ -42,35 +45,39 @@ img{width: 100%;display: block;}
     color: orangered;
 }
 
-.openmodal{
-    width: 100px;
+.openmodal,
+.openmodal2,
+.openmodal3{
+    cursor: pointer;
     border-radius: 12px;
     overflow: hidden;
 }
-.model_overlay{
+.modal_overlay{
     background-color: rgba(150, 150, 150, 0.8);
     position: fixed;
-    top: 0%;
-    bottom: 0%;
-    right: 0%;
-    left: 0%;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    display: none;
+    z-index: 1000;
 }
 .modal{
     background-color: whitesmoke;
     width: 800px;
-    height: 100px auto;
+    height: auto;
     margin: 100px auto;
     position: relative;
-
+    border-radius: 10px;
+    padding: 20px;
 }
 .close_btn{
     position: absolute;
     top: 10px;
     right: 15px;
-    font-size:20x;
+    font-size: 30px;
     color: darkblue;
     cursor: pointer;
-
 }
 .close_btn:hover{
     color: crimson;
@@ -81,11 +88,14 @@ img{width: 100%;display: block;}
     padding: 1em;
     color: darkblue;
 }
-.modal.info{
+.modal_info{
     display: flex;
-
 }
 .modal_img, .modal_p{
     width: 50%;
     padding: 2rem;
+}
+.modal_img{
+    max-width: 400px;
+    height: auto;
 }
